<resources>
    <string name="app_name">Courses List This Semester</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_create_subject">CreateSubjectActivity</string>
    <string name="registration_no">Reg Num</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="cross_image_content_description">Delete student from SQLite database</string>
    <string name="empty_student_list_message">No Data Found in Database!</string>
    <string name="empty_subject_list_message">No Data Found in Database!</string>
    <string name="student_name">Student Name</string>
    <string name="subject_name">Subject Name</string>
    <string name="subject_code">Course Code</string>
    <string name="subject_credit">Course Credit</string>
    <string name="update">Update</string>
    <string name="cancel_button">Cancel</string>
    <string name="schedule">Student</string>
    <string name="create_button">Create</string>
    <string name="all_delete">All Delete</string>
    <string name="sub_menu">Subject List</string>
    <string name="edit_button_description">Edit Single student information</string>
</resources>
