<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Features.ShowTakensubjectList.TakensubjectListActivity"
    tools:showIn="@layout/activity_takensubject_list"
    android:layout_marginBottom="8dp">
    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginHorizontal="8dp"
        android:layout_marginVertical="8dp"
        tools:text="John Doe"
        android:textSize="18sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/registrationNumTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/registration_no"
        android:layout_marginHorizontal="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/registrationNumTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="100145"
        app:layout_constraintTop_toBottomOf="@id/nameTextView"
        app:layout_constraintLeft_toRightOf="@id/registrationNumTitle"
        android:layout_marginStart="4dp"

        android:layout_marginLeft="4dp"/>
    <TextView
        android:id="@+id/phoneTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/registrationNumTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/phone"
        android:layout_marginHorizontal="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="01559541265"
        app:layout_constraintTop_toBottomOf="@id/registrationNumTitle"
        app:layout_constraintLeft_toRightOf="@id/phoneTitle"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <TextView
        android:id="@+id/emailTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/phoneTitle"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/email"
        android:layout_marginHorizontal="8dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf= "@id/phoneTitle"
        app:layout_constraintLeft_toRightOf="@id/emailTitle"
        tools:text="john@gmail.com"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"/>

    <Button
        android:id="@+id/add_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary"
        android:textColor="@color/white"
        android:layout_marginHorizontal="4dp"
        android:layout_marginVertical="8dp"
        android:text="Taken Subjects by Student"
        android:drawableRight="@drawable/ic_add_list"
        android:textAllCaps="false"
        android:textAlignment="textStart"
        app:layout_constraintTop_toBottomOf="@id/emailTextView" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/takensubjectRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/add_button">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/emptyTakenSubjectListTextView"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="There are no subject assigned to this student"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
